added a new html and css, added images to html, and added a couple of grids

--- a/index.html
+++ b/index.html
@@ -3,25 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
+    <title>The Good Place</title>
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
 </head>
 <body>
 
-    <div class="container">
-        <div class="item-1"></div>
-        <div class="item-2"></div>
-        <div class="item-3"></div>
-        <div class="item-4"></div>
+    <div class="header">
+    <h1 id="h-one">The Good Place</h1>
     </div>
 
-<button id="b1" onclick="dark()">Switch to Dark Mode</button>
+    <h2>Meet the Cast!</h2>
+
+    <div class="container">
+        <div class="item-1"><img id="img1" src="Images/1.jpeg"></div>
+        <div class="item-2"><img id="img2" src="Images/2.png"></div>
+        <div class="item-3"><img id="img3" src="Images/3.jpeg"></div>
+        <div class="item-4"><img id="img4" src="Images/group.jfif"></div><br>
+    </div>
+
+    <h3>Main Character Bios</h3>
+
+    <div class="mainc-container">
+        <div class="fillI"></div>
+        <div class="itemI"><img id="imgI" src="Images/elenor.jpg"></div>
+        <div class="itemII"><img id="imgII" src="Images/Tahani.jpg"></div>
+        <div class="itemIII"><img id="imgIII" src="Images/janet.jpg"></div>
+        <div class="fillII"></div>
+        <div class="fillIII"></div>
+        <div class="itemIV"><img id="imgIV" src="Images/chidi.jpg"></div>
+        <div class="itemV"><img id="imgV" src="Images/michael2.jpg"></div>
+        <div class="itemVI"><img id="imgVI" src="Images/jason.jpg"></div>
+        <div class="fillIV"></div>
+
+    </div>
+
+    <hr>
+
+<div class="header2"><h1 id="h-two">Character Hall of Fame</h1></div>
+
+    <hr>
+
+    <div class="bio-container">
+        <div class="item-fill"></div>
+        <div class="item1"><img id="img-one" src="Images/hofeleanor.jpg"></div>
+        <div class="item2"><img id="img-two" src="Images/HOF jason.jpg"></div>
+        <div class="item3"><img id="img-three" src="Images/halloffame janet.jpg"></div>
+        <div class="item-fill2"></div>
+    </div>
 
 <form action="#">
 
-    <fieldset>
-        <legend>Guess</legend>
+<fieldset>
 
 <label for="password">Secret Code</label>
 <input type="password" id="myInput" required>
@@ -32,6 +65,14 @@
 </form>
 
 <button id="b2" onclick="onSubmit()">Submit</button>
+
+<h1>Ready for Trivia?</h1>
+
+<form action="index(3).html">
+    
+</form>
+
+<button id="b1" onclick="dark()">Switch to Dark Mode</button>
     
 </body>
 </html>
