--- a/index(3).html
+++ b/index(3).html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Good Place</title>
-    <link rel="stylesheet" href="index(2).css">
+    <title>The Good Place Trivia</title>
+    <link rel="stylesheet" href="index(3).css">
 </head>
 <body>
     
-    <h1>Welcome</h1>
-
-    <h3>Good work on solving the password</h3>
-
 </body>
 </html>
