updated dark mode, finished content for all pages, and updated all css for all pages

--- a/index(2).html
+++ b/index(2).html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Good Place</title>
     <link rel="stylesheet" href="index(2).css">
+    <script src="index.js"></script>
 </head>
 <body>
+
+    <button id="b1" onclick="dark()">Switch to Dark Mode</button>
     
     <h1>Welcome</h1>
 
     <h3>Good work on solving the password</h3>
+
+    <p>Your reward is pictures of my dog.</p>
+
+    <img id="img1" src="Images/IMG_0200.jpg">
+    <img id="img2" src="Images/IMG_0201.jpg">
 
 </body>
 </html>
