added a bonus page

--- a/index(3).html
+++ b/index(3).html
@@ -183,10 +183,11 @@
         </fieldset>
     </form>
 
-    <form method="POST" action="index.html">
-        <button type="submit">Submit</button></form><br>
+    <form method="POST" action="index(4).html">
+    <button type="submit">Submit</button></form><br>
 
 <img src="Images/janet gif.gif">
-    
+
+<script src="index(2).js"></script>
 </body>
 </html>
